[tool.poetry]
name = "lungo"
version = "0.1.2"
description = ""
authors = ["Stepan Anokhin <stepan.anokhin@gmail.com>"]
include = ["README.md"]
homepage = "https://github.com/stepan-anokhin/lungo"
repository = "https://github.com/stepan-anokhin/lungo"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
prompt-toolkit = "^3.0.30"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
lungo = 'lungo.interpreter:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
